<resources>
    <string name="app_name">UGSmart</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="slogan_app">make everything easier with UGSmart.\nYou can report damage to the facility\nAnd see the news with UGSmart</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="ug_nsmart">UG\nSmart</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="email_text">Email</string>
    <string name="create_new_account">Create New Account</string>
    <string name="i_agree_with_terms_conditions"><![CDATA[I agree with terms & conditions]]></string>
    <string name="register">Register</string>
    <string name="class_text">Class</string>
    <string name="password">Password</string>
    <string name="npm">NPM</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <string name="home">Home</string>
    <string name="newsdesc">Pada hari Senin tanggal 29 April 2019 bertempat di Auditorium Kampus F8 Universitas Gunadarma dilaksanakan kegiatan penandatangan MOU dan Seminar UniIndustri Peluang dan Tantangan Pembangunan Wilayah 3T di Era Industry 40 dan Society 50: Peran Financial Technology dalam Peningkatan Inklusi Keuangan di Indonesia Narasumber pada kegiatan ini adalah Muhammad Hanif Direktur Pengembangan Bisnis Tanamduit Dr Ring Shang Ping CEO of Snap Innovation Pte Ltd Singapore Anang E Wicaksono Kepala Learning Center Bursa Komoditas ICDX dan Dr Avinanta Tarigan Head of Center for Gunadarma Information Security Research Center</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_slogan">You can report damage to the facility of \nGunadarma University. \nPlease report according to circumstances</string>
    <string name="complaint">Complaint</string>
    <string name="location">Location</string>
    <string name="username">Raka Permana Putra</string>
    <string name="complaint_user">Ac di ruangan J123 panas, sepertinya rusak</string>
    <string name="location_complaint">J234 Kalimalang</string>
    <string name="subject">Subject</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="news">News</string>
    <string name="career_center">Career Center</string>
    <string name="event_and_seminar">Event and Seminar</string>
    <string name="reminder">Reminder</string>
    <string name="about">About Us</string>
    <string name="seminar">SEMINAR ZAKAT.INFAQ dan SEDEKAH</string>
    <string name="waktu_tempat">Waktu dan Tempat</string>
    <string name="reports">Reports</string>
    <string name="report_desc">You can see and report the demage of the facility</string>
    <string name="news_desc">See all the news of\nThe Gunadarma University</string>
    <string name="event_desc">Find the event and seminar\nhere...</string>
    <string name="jobs_desc">Search and find your jobs\nhere...</string>
    <string name="grid_title">List of Report</string>
    <string name="email_user">rakapermanaputraa@gmail.com</string>
    <string name="npm_user">16116026</string>
    <string name="ug_news">UG News</string>
    <string name="event_seminar">Event and Seminar</string>
    <string name="exp_sambutan">Tak terasa Sudan lebih Dari 30 the Universitas Gunadarma telah…</string>
    <string name="sambutan_rektor">Sambutan Rektor</string>
    <string name="rektor_name">Prof. Dr. E.S. Margianti, SE.,MM.</string>
    <string name="home_news">Pendaftaran Mahasiswa Baru Universitas Gunadarma tahun ajaran 2018/2019 telah dibuka, anda dapat mengunjungi counter pendaftaran yang ada di Kampus kami atau dapat mengakses Pendaftaran UG Untuk keterangan lebih lanjut. Anda juga dapat menghubungi CALL CENTER 1500158 untuk mendapatkan informasi tentang pendaftaran.</string>
    <string name="news_title">Bidikmisi Universitas Gunadarma 2019</string>
    <string name="admin">ADMIN</string>
    <string name="bookmark">Bookmark</string>
</resources>
