<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.register.RegisterActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/TitleBarTextAppearance">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="23sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/colorWhite"/>

    </android.support.v7.widget.Toolbar>

    <TextView
            android:layout_below="@id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="20sp"
            android:id="@+id/tvCreateNew"
            android:fontFamily="@font/roboto_condensed_bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>

    <LinearLayout
            android:id="@+id/layoutRegister"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:inputType="textCapSentences"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_text"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtNPM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/npm"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:inputType="number"
                    android:maxLength="8"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/class_text"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:inputType="textCapCharacters"
                    android:maxLength="5"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtReTypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_type_password"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cBTerms"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:textSize="12sp"
                    android:text="@string/i_agree_with_terms_conditions"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:orientation="vertical">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_primary"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="22dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:id="@+id/btnRegister"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/roboto_medium"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_condensed_regular"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Login"
                    android:textSize="14sp"
                    android:id="@+id/tvLogin"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/roboto_condensed_bold"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>