<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.login.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ug_nsmart"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/robotoslab_bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@id/layoutRegister"
            android:layout_marginBottom="100dp">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_text"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="36dp"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:hint="@string/password"
                    android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/rounded_primary"
                android:text="@string/login"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:id="@+id/layoutRegister"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_condensed_regular"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Register here"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:id="@+id/tvRegister"
                android:fontFamily="@font/roboto_condensed_bold"/>

    </LinearLayout>

</RelativeLayout>